tests/baselines/reference/contextuallyTypeCommaOperator03.errors.txt
contextuallyTypeCommaOperator03.ts(3,6): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== contextuallyTypeCommaOperator03.ts (1 errors) ====
    let x: (a: string) => string;
    
    x = (a => a, b => b);
         ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.